--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,8 @@ android {
 dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     //implementation 'com.github.pires:obd-java-api:1.0'
-    implementation 'com.github.eltonvs:java-obd-api:0.0.1'
+    implementation 'com.github.eltonvs:java-obd-api:0.0.1' //obd
+    implementation 'com.github.anastr:speedviewlib:1.4.1' //tachimetri
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
