--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Speed"></activity>
+        <activity android:name=".Speed"/>
         <activity android:name=".DTC" />
         <activity android:name=".OBDActivity" />
         <activity android:name=".MainActivity">
