--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Speed"/>
+        <activity android:name=".Speed"
+            android:screenOrientation="landscape" />
         <activity android:name=".DTC" />
-        <activity android:name=".OBDActivity" />
+        <activity android:name=".OBDActivity"
+            android:screenOrientation="portrait" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
