aggiunto grafico da 0 a 100 in n secondi

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Speed"
+        <activity
+            android:screenOrientation="landscape"
+            android:name=".Graph">
+        </activity>
+        <activity
+            android:name=".Speed"
             android:screenOrientation="landscape" />
         <activity android:name=".DTC" />
-        <activity android:name=".OBDActivity"
+        <activity
+            android:name=".OBDActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".MainActivity">
             <intent-filter>
