--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     implementation 'com.github.eltonvs:java-obd-api:0.0.1' //obd
     implementation 'com.github.anastr:speedviewlib:1.0.0' //tachimetri
     implementation 'com.mikhaellopez:circularprogressbar:2.0.0'
-
+    implementation 'com.jjoe64:graphview:4.2.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
