Aggiunte e Fix vari
Migrazione progetto ad AndroidX
Aggiunta Toolbar
Aggiunte impostazioni applicazione, menu, SharedPreferences per salvare i vari delay dei comandi e delle CircleBar scelti dall'utente tramite le impostazioni
Rimosso codice non più utilizzato
Ottimizzato lo spazio utilizzato nello schermo, ora le varie Activity risultano più pulite grazie alla separazione delle configurazioni tramite le impostazioni
Ottimizzazioni varie e fix generali

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ChangeCardView"></activity>
-        <activity android:name=".Setting" />
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
+        <activity android:name=".ChangeCardView" />
         <activity
             android:name=".Graph"
             android:screenOrientation="landscape" />
@@ -33,7 +35,8 @@
         <activity
             android:name=".OBDActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
